add calibre:// link handler
