# src/Routing/url_generating_routes.php
@@ -103,6 +103,8 @@ return [
     'loader' => [[], ['_handler' => 'SebLucas\\Cops\\Handlers\\LoaderHandler', '_route' => 'loader'], [], [['text', '/loader']], [], [], []],
     'zipper-page-id-type' => [['page', 'id', 'type'], ['_handler' => 'SebLucas\\Cops\\Handlers\\ZipperHandler', '_route' => 'zipper-page-id-type'], [], [['text', '.zip'], ['variable', '/', '[^/\\.]++', 'type'], ['variable', '/', '[^/]++', 'id'], ['variable', '/', '[^/]++', 'page'], ['text', '/zipper']], [], [], []],
     'zipper-page-type' => [['page', 'type'], ['_handler' => 'SebLucas\\Cops\\Handlers\\ZipperHandler', '_route' => 'zipper-page-type'], [], [['text', '.zip'], ['variable', '/', '[^/\\.]++', 'type'], ['variable', '/', '[^/]++', 'page'], ['text', '/zipper']], [], [], []],
+    'calibre-details' => [['action', 'library', 'details'], ['_handler' => 'SebLucas\\Cops\\Handlers\\CalibreHandler', '_route' => 'calibre-details'], ['details' => '.*'], [['variable', '/', '.*', 'details'], ['variable', '/', '[^/]++', 'library'], ['variable', '/', '[^/]++', 'action'], ['text', '/calibre']], [], [], []],
+    'calibre-library' => [['action', 'library'], ['_handler' => 'SebLucas\\Cops\\Handlers\\CalibreHandler', '_route' => 'calibre-library'], [], [['variable', '/', '[^/]++', 'library'], ['variable', '/', '[^/]++', 'action'], ['text', '/calibre']], [], [], []],
     'calres' => [['db', 'alg', 'digest'], ['_handler' => 'SebLucas\\Cops\\Handlers\\CalResHandler', '_route' => 'calres'], ['db' => '\\d+'], [['variable', '/', '[^/]++', 'digest'], ['variable', '/', '[^/]++', 'alg'], ['variable', '/', '\\d+', 'db'], ['text', '/calres']], [], [], []],
     'zipfs' => [['db', 'data', 'comp'], ['_handler' => 'SebLucas\\Cops\\Handlers\\ZipFsHandler', '_route' => 'zipfs'], ['db' => '\\d+', 'data' => '\\d+', 'comp' => '.+'], [['variable', '/', '.+', 'comp'], ['variable', '/', '\\d+', 'data'], ['variable', '/', '\\d+', 'db'], ['text', '/zipfs']], [], [], []],
     'mail' => [[], ['_handler' => 'SebLucas\\Cops\\Handlers\\MailHandler', '_route' => 'mail'], [], [['text', '/mail']], [], [], []],
